# route/index.routes.js
@@ -5,6 +5,7 @@ import StellarRoutes from "./routes/stellar.routes.js";
 import UploadRoutes from "./routes/upload.routes.js";
 import CourseRoutes from "./routes/course.routes.js";
 import CategoryRoutes from "./routes/category.routes.js";
+import UserRoutes from "./routes/user.routes.js";
 
 const router = Router();
 
@@ -13,7 +14,7 @@ router.use("/student", StudentRoutes);
 router.use("/instructor", InstructorRoutes);
 router.use("/stellar", StellarRoutes);
 router.use("/course", CourseRoutes);
-router.use("/category", CategoryRoutes);
+router.use("/user", UserRoutes);
 
 
 export default router;
